2013-12-13  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-decode-xs-complex-type): Handle nil type
	indicator.
	(soap-parse-envelope): Handle response headers.
	(soap-parse-response): Likewise.  Only return non-nil decoded
	values.

2013-12-12  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-validate-xs-simple-type): Return validated
	value.

2013-12-02  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-xs-parse-element)
	(soap-xs-parse-simple-type) 
	(soap-xs-parse-complex-type)
	(soap-parse-message)
	(soap-parse-operation): add the current namespace to the element
	being created
	(soap-resolve-references-for-xs-element)
	(soap-resolve-references-for-xs-simple-type)
	(soap-resolve-references-for-xs-complex-type)
	(soap-resolve-references-for-operation): resolve the namespace to
	the namespace tag
	(soap-make-wsdl): specify a namespace tag when creating the xsd
	and soapenc namespaces
	(soap-wsdl-resolve-references): don't update namespace tags in
	elements here
	(soap-parse-port-type): bind the urn: to soap-target-xmlns
	(soap-encode-body): don't add nil namespace tags to
	soap-encoded-namespaces

2013-11-25  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-inspect.el: use `soap-make-wsdl` to construct the object
	for registering the soap-inspect method.

	Make debbugs tests pass

	* soap-client.el (soap-decode-any-type): use soap-l2fq on the type
	name, also skip string only nodes when decoding a structure.
	(soap-xs-parse-complex-type): (BUG) dispatch parsing for choice
	types too
	(soap-encode-body): grab the header value from the param table

2013-11-23  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-should-encode-value-for-xs-element): new
	function
	(soap-encode-xs-element): don't encode nil value unless needed

2013-11-17  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-bound-operation): new slot `soap-body`