@@ -1,3 +1,9 @@
+2013-12-27  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* soap-client.el, soap-inspect.el: converted to lexical binding,
+	corrected compiler warnings about unused function arguments and
+	local variables.
+
 2013-12-13  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
 
 	* soap-client.el (soap-decode-xs-complex-type): Handle nil type
